docs: lead the README with examples + performance
Restructure the landing page for first-time visitors:
- Quickstart: byte[] round-trip, dictionary train+compress, zero-copy
  MemorySegment (signatures verified against the 0.6 API)
- Performance: surface the publication-grade golden-corpus numbers from
  docs/benchmarks.md (best-vs-best vs zstd-jni's own zero-copy path:
  +9-23% throughput on small payloads, allocation tie; allocation-free vs
  the convenient byte[] APIs) — honest ties included
- Sharpen the pitch (dictionary + zero-copy, the two real differentiators)
  and note the JDK 25 framing (first LTS with stable FFM)
- Move Install above Documentation; link the release smoke matrix as
  per-arch proof

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>